Basic image loading from API.

--- a/android/src/main/res/layout/image_grid_list_view.xml
+++ b/android/src/main/res/layout/image_grid_list_view.xml
@@ -3,8 +3,16 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
-    <include layout="@layout/app_bar"/>
+    <include layout="@layout/app_bar" />
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/image_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
 
 </com.revl.challenge.ui.image.ImageGridListView>
