--- a/android/src/main/res/layout/image_detail_list_view.xml
+++ b/android/src/main/res/layout/image_detail_list_view.xml
@@ -6,7 +6,10 @@
         android:orientation="vertical"
         >
 
-    <include layout="@layout/app_bar" />
-
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/image_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
 </com.revl.challenge.ui.image.ImageDetailListView>
